[gd_scene load_steps=14 format=3 uid="uid://w67rvbnm0ayb"]

[ext_resource type="Script" path="res://difficulty.gd" id="1_4ytq4"]
[ext_resource type="Texture2D" uid="uid://pgdjadsfsarh" path="res://Art/GUI Art/Easy button.png" id="2_6l1so"]
[ext_resource type="Texture2D" uid="uid://ctm5u00xojwge" path="res://Art/GUI Art/pressed easy button.png" id="3_xx3kb"]
[ext_resource type="Texture2D" uid="uid://ofwy2rbk42q4" path="res://Art/GUI Art/medium button.png" id="4_hqxcf"]
[ext_resource type="Texture2D" uid="uid://cqqpq2k51j5qt" path="res://Art/GUI Art/pressed medium button.png" id="5_oind4"]
[ext_resource type="Texture2D" uid="uid://dkpnq0d0sf5en" path="res://Art/GUI Art/Hard Button.png" id="6_81ymr"]
[ext_resource type="Texture2D" uid="uid://br7k7rxvyq0rf" path="res://Art/GUI Art/Pressed Hard Button.png" id="7_vja2o"]
[ext_resource type="Texture2D" uid="uid://dj3mlosggv1ka" path="res://Art/GUI Art/impossible button.png" id="8_0qd8w"]
[ext_resource type="Texture2D" uid="uid://dk4xhbsxsi8ml" path="res://Art/GUI Art/pressed impossible button.png" id="9_00mte"]
[ext_resource type="Texture2D" uid="uid://c2m8sbipm8oaf" path="res://Parallax/Garden_s Forest/background4.png" id="10_24hbi"]
[ext_resource type="Texture2D" uid="uid://ckquxv8pdnx0o" path="res://Parallax/Garden_s Forest/background3.png" id="11_oxspy"]
[ext_resource type="Texture2D" uid="uid://6j2454jial6c" path="res://Parallax/Garden_s Forest/background2.png" id="12_3colt"]
[ext_resource type="Texture2D" uid="uid://38g7ge6orvdd" path="res://Parallax/Garden_s Forest/background1.png" id="13_1ubk0"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4ytq4")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -221.0
offset_top = -109.0
offset_right = 2236.0
offset_bottom = 1307.0
color = Color(0.180392, 0, 0.309804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Choose your Difficulty"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 70

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 450
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="EasyButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("2_6l1so")
texture_pressed = ExtResource("3_xx3kb")
stretch_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="MediumButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer4"]
layout_mode = 2
texture_normal = ExtResource("4_hqxcf")
texture_pressed = ExtResource("5_oind4")
stretch_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 450
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="HardButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer6"]
layout_mode = 2
texture_normal = ExtResource("6_81ymr")
texture_pressed = ExtResource("7_vja2o")
stretch_mode = 3

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="ImpossibleButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer5"]
layout_mode = 2
texture_normal = ExtResource("8_0qd8w")
texture_pressed = ExtResource("9_00mte")
stretch_mode = 3

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true
follow_viewport_scale = 0.75

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(20, 47)
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1256, 826.333)
scale = Vector2(7.02604, 7.76889)
texture = ExtResource("10_24hbi")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(20, 47)
motion_scale = Vector2(0.1, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(756.667, 514.333)
scale = Vector2(4.36198, 5.41333)
texture = ExtResource("11_oxspy")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(20, 47)
motion_scale = Vector2(0.2, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(756.667, 514.333)
scale = Vector2(4.36198, 5.41333)
texture = ExtResource("12_3colt")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(18, 46)
motion_scale = Vector2(0.3, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(758.667, 515.333)
scale = Vector2(4.36198, 5.41333)
texture = ExtResource("13_1ubk0")

[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/EasyButton" to="." method="_on_easy_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer4/MediumButton" to="." method="_on_medium_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer6/HardButton" to="." method="_on_hard_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer5/ImpossibleButton" to="." method="_on_impossible_button_button_up"]
